test/trivial/bradc/undefinedfn2.chpl
function main() {
  var x = 1;
  foo(x);
}
